Remove MAVEN_HOME and use /opt/jboss-set-ci-scripts/eap-63-testsuite.sh